tests/NormalTests/paczka1/small_fuzzy/55428128.err
Error in line 3: AoJ81iyG S577 39,9
Error in line 8: AoJ81iyG A259 49,6
Error in line 2: ZOBKHgziC S745 72,0
